--- a/accounts/templates/account/profile.html
+++ b/accounts/templates/account/profile.html
@@ -1,4 +1,4 @@
-{% extends "core/layouts/blank.html" %}
+{% extends "core/layouts/box.html" %}
 {% block title %}Profile{% endblock %}
 {% block content %}
 
