--- a/core/templates/core/layouts/box.html
+++ b/core/templates/core/layouts/box.html
@@ -1,12 +1,9 @@
 {% extends "core/_base.html" %}
 {% block layout %}
-    <content class="block max-w-3xl mx-auto md:p-12">
-        <div class="bg-white rounded-2xl md:drop-shadow-2xl shadow-black w-full p-8">
-
+    <div class="container mx-auto px-4 py-8 md:py-12 max-w-2xl">
+        <div class="card bg-base-100 shadow-xl p-6 md:p-8 w-full">
             {% block content %}
             {% endblock content %}
-
         </div>
-    </content>
-
+    </div>
 {% endblock layout %}
